# AmBeTrigSim

./: .gitignore  AmBeHousing.gdml  CMakeLists.txt  README.md  ambe_sim.cc
include/: ActionInitialization.hh  AmBeRunStatistics.hh  DetectorConstruction.hh  PmtHitWriter.hh  PrimaryGeneratorAction.hh  RootPrimarySource.hh  RunAction.hh  SteppingAction.hh
macros/: debug_gamma_bgo.mac  debug_pmt_direct.mac  debug_pmt_optical.mac  debug_tracks.mac  run.mac  vis.mac  vis_ambe.mac  vis_setup.mac
pmt_response/: PmtResponse.cc  README.md
src/: ActionInitialization.cc  AmBeRunStatistics.cc  DetectorConstruction.cc  PmtHitWriter.cc  PrimaryGeneratorAction.cc  RootPrimarySource.cc  RunAction.cc  SteppingAction.cc
